--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>My Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<p class="major">Cis van Aken, 24 Years old, .</p>
+							<p class="medium"> Master of Science in Human Computer Science, department of Information Sciences, Utrecht University. </p>
+							<p class="medium"> BSc in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
