--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>My Story</h1>
-							<p class="major">Cis van Aken, 24 Years old, .</p>
+							<p class="major">Cis van Aken.</p>
 							<p class="medium"> Master of Science in Human Computer Science, department of Information Sciences, Utrecht University. </p>
 							<p class="medium"> BSc in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">About Me</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -37,9 +37,11 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Who am I?</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>As a dedicated and enthusiastic Human-Computer Interaction master’s student with a degree in Artificial Intelligence. I currently live in Nijmegen and next to my studies I work as a work student for HSO in Veenendaal. I enjoy photography, and am teaching myself post-processing. Almost all images in this document are also taken by me as a showcase.</p>
+
+							<p>I am a people's person that has always found himself in leadership positions in several different associations and committees that I have joined. I work best as a guide and a connector between different groups, that I can then support with my own skills and knowledge. </p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">See My CV</a></li>
 							</ul>
 						</div>
 						<div class="image">
