Second page made, index updated.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 							<h1>My Story</h1>
 							<p class="major">Cis van Aken.</p>
 							<p class="medium"> Master of Science in Human Computer Science, department of Information Sciences, Utrecht University. </p>
-							<p class="medium"> BSc in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
+							<p class="medium"> B.Sc. in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">About Me</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/Profile_temp.png" alt="" />
 						</div>
 					</section>
 
@@ -37,7 +37,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Who am I?</h2>
-							<p>As a dedicated and enthusiastic Human-Computer Interaction master’s student with a degree in Artificial Intelligence. I currently live in Nijmegen and next to my studies I work as a work student for HSO in Veenendaal. I enjoy photography, and am teaching myself post-processing. Almost all images in this document are also taken by me as a showcase.</p>
+							<p>As a dedicated and enthusiastic Human-Computer Interaction master’s student with a degree in Artificial Intelligence. I currently live in Nijmegen and next to my studies I work as a work student for HSO in Veenendaal. I enjoy photography, and I am teaching myself post-processing. Almost all images in this document are also taken by me as a showcase.</p>
 
 							<p>I am a people's person that has always found himself in leadership positions in several different associations and committees that I have joined. I work best as a guide and a connector between different groups, that I can then support with my own skills and knowledge. </p>
 							<ul class="actions stacked">
@@ -53,9 +53,9 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>My Work</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>Over my studies, I took part in a lot of projects. From designing and building a gesture-based IR-remote, to conceptualizing and prototyping a web plugin that advises you on privacy policies, you can read all about them in this section.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="HTML/works.html" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -66,8 +66,9 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h3>"papers"</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>"papers"</h2>
+							<p>A lot of my work was also of a more theoretical nature. Some that are worth highlighting, are my Bachelor Thesis written on Neuromorphic computing and scalabilty, as well as a paper on a machine learning model used to classify MEG data.</p>
+							<p>Besides technical papers, I also wrote on more social and ethical issues, such as an ethical analysis on the usage on Recommendation Algorithms and how much responsibility companies have regarding its impact.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -80,8 +81,8 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Contact</h2>
+							<p>Include: email, linkedin, GitHub</p>
 						</div>
 
 						<!-- Gallery -->
@@ -91,8 +92,8 @@
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>My Photography</h3>
+										<p>I am mainly a hobby photographer and editor, here are some of the photos I have taken.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
