--- a/HTML/papers.html
+++ b/HTML/papers.html
@@ -8,8 +8,21 @@
     <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
+<div id="wrapper" class="diviced">
+    <header id="header">About this section</header>
+    <p>I have researched a wide variety of topics over the past few years. Below several of the more interesting examples are shown, to showcase my varying skillset.</p>
+</div>
+<div id="wrapper" class="diviced">
+    <header id="header">Bachelor Thesis on Neuromorphic computing</header>
+    
+</div>
+
+  <div id="wrapper" class="diviced">
+    <header id="header">A Machine Learning model to classify MEG data</header>
+    
+</div>  
 <div id="wrapper" class="divided">
-    <header id="header"></header>
+    <header id="header">Mental Health Effects of Social Media</header>
 
     <ul class="actions stacked">
         <li><a href="../index.html" class="button">Back</a></li>
