--- a/HTML/papers.html
+++ b/HTML/papers.html
@@ -1,35 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Writing</title>
+    <title>About Me</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
-<div id="wrapper" class="diviced">
-    <header id="header">About this section</header>
-    <p>I have researched a wide variety of topics over the past few years. Below several of the more interesting examples are shown, to showcase my varying skillset.</p>
-</div>
-<div id="wrapper" class="diviced">
-    <header id="header">Bachelor Thesis on Neuromorphic computing</header>
-    
-</div>
-
-  <div id="wrapper" class="diviced">
-    <header id="header">A Machine Learning model to classify MEG data</header>
-    
-</div>  
+<!-- Introducing myself-->
 <div id="wrapper" class="divided">
-    <header id="header">Mental Health Effects of Social Media</header>
+    <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+        <div class="content">
+            <header>
+                <h1>In this section</h1>
+            </header>
+        </div>
+        <div class="image">
+            <img src="/images/spotlight03.jpg" alt="" />
+        </div>
+    </section>
 
-    <ul class="actions stacked">
-        <li><a href="../index.html" class="button">Back</a></li>
-    </ul>
+    <section class="banner style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+        <div class="content">
+            <header>
+                <h2>Bachelor Thesis on Neuromorphic Computing</h2>
+            </header>
+        </div>
+        <div class="image">
+            <img src="/images/spotlight03.jpg" alt="" />
+        </div>
+    </section>
+
+    <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+        <div class="content">
+            <header>
+                <h2>A machine Learning model to classify MEG data</h2>
+            </header>
+        </div>
+        <div class="image">
+            <img src="/images/spotlight03.jpg" alt="" />
+        </div>
+    </section>
+
+    <section class="banner style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+        <div class="content">
+            <header>
+                <h2>Mental Health Effects of Social Media</h2>
+            </header>
+            <ul class="actions stacked">
+                <li><a href="../index.html" class="button">Back to Home</a></li>
+            </ul>
+        </div>
+        <div class="image">
+            <img src="/images/spotlight03.jpg" alt="" />
+        </div>
+    </section>
+
 
 </div>
-
 
 <!-- Scripts -->
 <script src="../assets/js/jquery.min.js"></script>
