--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<p class="medium"> Master of Science in Human Computer Science, department of Information Sciences, Utrecht University. </p>
 							<p class="medium"> B.Sc. in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">About Me</a></li>
+								<li><a href="HTML/about.html" class="button big wide smooth-scroll-middle">About Me</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -41,7 +41,7 @@
 
 							<p>I am a people's person that has always found himself in leadership positions in several different associations and committees that I have joined. I work best as a guide and a connector between different groups, that I can then support with my own skills and knowledge. </p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">See My CV</a></li>
+								<li><a href="../files/CV Cis van Aken - NL.pdf" class="button">See My CV</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -70,7 +70,7 @@
 							<p>A lot of my work was also of a more theoretical nature. Some that are worth highlighting, are my Bachelor Thesis written on Neuromorphic computing and scalabilty, as well as a paper on a machine learning model used to classify MEG data.</p>
 							<p>Besides technical papers, I also wrote on more social and ethical issues, such as an ethical analysis on the usage on Recommendation Algorithms and how much responsibility companies have regarding its impact.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="HTML/papers.html" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
