--- a/HTML/works.html
+++ b/HTML/works.html
@@ -16,7 +16,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -27,7 +27,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -38,7 +38,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
