--- a/HTML/about.html
+++ b/HTML/about.html
@@ -4,8 +4,8 @@
     <title>About Me</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
 <!-- Introducing myself-->
@@ -17,7 +17,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -28,7 +28,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -42,7 +42,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
