--- a/HTML/papers.html
+++ b/HTML/papers.html
@@ -17,7 +17,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -28,7 +28,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -39,7 +39,7 @@
             </header>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
@@ -53,7 +53,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="/images/spotlight03.jpg" alt="" />
+            <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
