--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 							<p>I am a people's person that has always found himself in leadership positions in several different associations and committees that I have joined. I work best as a guide and a connector between different groups, that I can then support with my own skills and knowledge. </p>
 							<ul class="actions stacked">
-								<li><a href="files/CV Cis van Aken - NL.pdf" class="button">See My CV</a></li>
+								<li><a href="files/cv_nl.pdf" class="button">See My CV</a></li>
 							</ul>
 						</div>
 						<div class="image">
