Adding content to the about section.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -15,28 +15,62 @@
             <header>
                 <h1>Who am I?</h1>
             </header>
+            <p>I am Cis van Aken, aiming to be a professional in AI and UX and this is my personal website. I am 24 years old, and currently in the final year of my Masters in Human Computer Interaction.</p>
         </div>
         <div class="image">
             <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
-    <section class="banner style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+    <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
         <div class="content">
             <header>
                 <h2>My Education</h2>
             </header>
+            <p>2019-2024: Bachelor of Science in AI, followed at Radboud University in Nijmegen.</p>
+            <P>A curriculum focussed on both technical aspects of AI, complemented with data science and data engineering techniques, as well as extensive education on the cognitive and social aspects of AI. Being part of the faculty of Social Sciences, the approach Radboud University takes towards AI is a very human one.
+            The focus was often on the interaction between human and AI, as well as using AI to learn more about human cognition and perception.</P>
+            <P>2024-2026: Master of Science in HCI, Information Sciences, at Utrecht University.</P>
+            <p>Following my Bachelors, I felt like I had 2 options. I either specialize myself more into AI, or I choose a slightly different path and instead broaden my skillset.
+            I chose the latter, and following this, I ended up studying Human-Computer Interaction in Utrecht. Through my elective, the curriculum is still tailored towards data, information and AI, however, I extended my skillset greatly.
+            Through the Masters, I obtained the necessary skills in user research, prototyping and Human Centered software and design principles to hopefully achieve my goals.</p>
         </div>
         <div class="image">
             <img src="../images/spotlight03.jpg" alt="" />
         </div>
     </section>
 
-    <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+    <section class="spotlight style1 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right">
         <div class="content">
             <header>
-                <h2>My Experience</h2>
+                <h2>Work Experience</h2>
             </header>
+            <p>
+                December 2024 -> current: Working Student Managed Services and Support at HSO, Veenendaal.
+            </p>
+            <p>
+
+            </p>
+        </div>
+        <div class="image">
+            <img src="../images/spotlight03.jpg" alt="" />
+        </div>
+    </section>
+
+    <section class="spotlight style1 orient-right content-align-right image-position-left onload-image-fade-in onload-content-fade-left">
+        <div class="content">
+            <header>
+                <h2>Other Experiences</h2>
+            </header>
+            <p>
+                August 2023 -> August 2024: Chairmain of Faculty Umbrella Association Olympus.
+            </p>
+            <p>
+                September 2021 -> September 2022: Secretary of the Board of Study Association CognAC.
+            </p>
+            <p>
+                Mentor Trainer for student mentors during the Radboud Introduction Week.
+            </p>
             <ul class="actions stacked">
                 <li><a href="../index.html" class="button">Back to Home</a></li>
             </ul>
