--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>My Story</h1>
+							<h1>Welcome to my site</h1>
 							<p class="major">Cis van Aken.</p>
 							<p class="medium"> Master of Science in Human Computer Science, department of Information Sciences, Utrecht University. </p>
 							<p class="medium"> B.Sc. in Artificial Intelligence Obtained at Radboud University Nijmegen.</p>
 							<ul class="actions stacked">
-								<li><a href="HTML/about.html" class="button big wide smooth-scroll-middle">About Me</a></li>
+								<li><a href="files/cv_nl.pdf" class="button">See My CV</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -41,7 +41,7 @@
 
 							<p>I am a people's person that has always found himself in leadership positions in several different associations and committees that I have joined. I work best as a guide and a connector between different groups, that I can then support with my own skills and knowledge. </p>
 							<ul class="actions stacked">
-								<li><a href="files/cv_nl.pdf" class="button">See My CV</a></li>
+								<li><a href="HTML/about.html" class="button big wide smooth-scroll-middle">Read More About Me</a></li>
 							</ul>
 						</div>
 						<div class="image">
