--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style3 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Welcome to my site</h1>
 							<p class="major">Cis van Aken.</p>
@@ -34,7 +34,7 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Who am I?</h2>
 							<p>As a dedicated and enthusiastic Human-Computer Interaction master’s student with a degree in Artificial Intelligence. I currently live in Nijmegen and next to my studies I work as a work student for HSO in Veenendaal. I enjoy photography, and I am teaching myself post-processing. Almost all images in this document are also taken by me as a showcase.</p>
