Finished content in about.html Added files to display in papers.html Added pictures to show in works.html

--- a/HTML/works.html
+++ b/HTML/works.html
@@ -20,29 +20,51 @@
         </div>
     </section>
 
-    <section class="banner style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+    <section class="spotlight style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
         <div class="content">
             <header>
                 <h2>Magic Wand: An IR-powered, gesture based remote</h2>
             </header>
+            <p>
+                During this project, for one of my Master courses, we worked in groups to ideate and prototype a functional product. Over the course of the project, I was tasked with programming the components, as well as taking care of the electric wiring.
+            </P>
+            <P>
+                We designed and built a working remote, that works with different gestures to perform different commands. In the end, we managed to make so that it can turn devices on and off, as well as cycle through different settings.
+            </P>
+            <P>
+                I learned a lot about user testing, prototyping and product design and ultimately I am quite proud of the project.
+            </p>
         </div>
         <div class="image">
-            <img src="../images/spotlight03.jpg" alt="" />
+            <img src="../images/gallery/works/wand.jpg" alt="" />
         </div>
     </section>
 
-    <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+    <section class="spotlight style2 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content">
             <header>
                 <h2>LawyAir: An extension to help you understand online privacy</h2>
             </header>
+            <p>
+                For one of my courses, we got assigned groups and paired with a real life client. This client presented us with a problem: “People have no clue what they are consenting to and do not have the amount of control over their data they should have.”
+                An interesting problem with many different angles to tackle it from.
+            </p>
+            <p>
+                It was important that we built a tool that actually informs people of what they consent to online, rather than just making declining cookies for instance just easier.
+                We brainstormed many different ideas, ranging from a website that informs people on the topic, to a tool that helps you fill in cookie consent forms automatically.
+            </p>
+            <p>
+                We settled on designing an extension for your browser, that pops up and summarizes what is in cookie consent forms.
+                In the form of a small “lawyer” avatar, that you can ask questions to and interact with, to deliver the information in an easily digestible manner.
+                My contributions were mainly centered around the user research. I designed personas and build user stories around the interviews we held and suggested improvements to the prototype based on the feedback we received.
+            </p>
         </div>
         <div class="image">
-            <img src="../images/spotlight03.jpg" alt="" />
+            <img src="../images/gallery/works/lawyair.png" alt="" />
         </div>
     </section>
 
-    <section class="banner style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+    <section class="spotlight style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
         <div class="content">
             <header>
                 <h2>Visualizing Within-Country migration in the Netherlands</h2>
