--- a/index.html
+++ b/index.html
@@ -82,11 +82,33 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Contact</h2>
-							<p>Include: email, linkedin, GitHub</p>
+							<div class="items style1 medium onscroll-fade-in">
+								<section>
+									<span class="icon style2 major fa-address-book"></span>
+									<h3>Email</h3>
+									<p>Business: cjf.vanaken@gmail.com</p>
+									<p>Academic: c.j.f.vanaken@students.uu.com</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-linkedin-in"></span>
+									<h3>LinkedIn</h3>
+									<ul class="actions stacked">
+										<li><a href="https://www.linkedin.com/in/cis-van-aken/" class="button style1">Connect with me</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon style2 major fa-github-square"></span>
+									<h3>Github</h3>
+									<p>find my code <a href="https://github.com/CiVa01">here.</a></p>
+								</section>
+							</div>
 						</div>
 
 						<!-- Gallery -->
+						<h2>Gallery</h2>
+						<p>A small selection of my photography.</p>
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
+
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
