Finished works.html

--- a/HTML/works.html
+++ b/HTML/works.html
@@ -13,10 +13,11 @@
         <div class="content">
             <header>
                 <h1>In this section</h1>
+                Here you can find some of the projects I worked on during my studies. These projects range from more technical assignments, to user research and design based projects. I tried to pick a varied selection of works, to showcase my broad skill set.
             </header>
         </div>
         <div class="image">
-            <img src="../images/spotlight03.jpg" alt="" />
+            <img src="../images/gallery/myself/foto_zelf_2.jpg" alt="" />
         </div>
     </section>
 
@@ -27,6 +28,7 @@
             </header>
             <p>
                 During this project, for one of my Master courses, we worked in groups to ideate and prototype a functional product. Over the course of the project, I was tasked with programming the components, as well as taking care of the electric wiring.
+                I also stood in as user researcher when one of the group members fell away. In this instance, I helped a lot with experimenting and conducting interviews and field studies with potential users.
             </P>
             <P>
                 We designed and built a working remote, that works with different gestures to perform different commands. In the end, we managed to make so that it can turn devices on and off, as well as cycle through different settings.
@@ -64,17 +66,21 @@
         </div>
     </section>
 
-    <section class="spotlight style1 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+    <section class="spotlight style5 orient-right content-align-right image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
         <div class="content">
             <header>
                 <h2>Visualizing Within-Country migration in the Netherlands</h2>
             </header>
+            <p>
+                For a course in Information Visualization, we worked in groups to create a visualization of a dataset of our choice. We chose to visualize within-country migration in the Netherlands, using data from the CBS.
+                Being the most experienced programmer in the group, I took the lead in designing the visualization and implementing it in D3.js, while also contributing to the research and ideation when help was needed process.
+            </p>
             <ul class="actions stacked">
                 <li><a href="../index.html" class="button">Back to Home</a></li>
             </ul>
         </div>
         <div class="image">
-            <img src="../images/spotlight03.jpg" alt="" />
+            <img src="../images/gallery/works/dashboard.png" alt="" />
         </div>
     </section>
 
