--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>My Work</h2>
+							<h2>Projects</h2>
 							<p>Over my studies, I took part in a lot of projects. From designing and building a gesture-based IR-remote, to conceptualizing and prototyping a web plugin that advises you on privacy policies, you can read all about them in this section.</p>
 							<ul class="actions stacked">
 								<li><a href="HTML/works.html" class="button">Read More</a></li>
@@ -66,7 +66,7 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>"papers"</h2>
+							<h2>Papers</h2>
 							<p>A lot of my work was also of a more theoretical nature. Some that are worth highlighting, are my Bachelor Thesis written on Neuromorphic computing and scalabilty, as well as a paper on a machine learning model used to classify MEG data.</p>
 							<p>Besides technical papers, I also wrote on more social and ethical issues, such as an ethical analysis on the usage on Recommendation Algorithms and how much responsibility companies have regarding its impact.</p>
 							<ul class="actions stacked">
@@ -90,14 +90,14 @@
 									<p>Academic: c.j.f.vanaken@students.uu.com</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-linkedin-in"></span>
+									<span class="icon brands style2 major fa-linkedin-in"></span>
 									<h3>LinkedIn</h3>
 									<ul class="actions stacked">
 										<li><a href="https://www.linkedin.com/in/cis-van-aken/" class="button style1">Connect with me</a></li>
 									</ul>
 								</section>
 								<section>
-									<span class="icon style2 major fa-github-square"></span>
+									<span class="icon brands style2 major fa-github-square"></span>
 									<h3>Github</h3>
 									<p>find my code <a href="https://github.com/CiVa01">here.</a></p>
 								</section>
@@ -261,26 +261,29 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Skill set</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<p>
+								Below is a listing of relevant technical skills I have acquired over the years, both through my studies and personal interest.
+							</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-gem"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<span class="icon solid style2 major fa-cog"></span>
+									<h3>Prototyping</h3>
+									<p></p>
+									</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Programming</h3>
+									<p>Extensive programming experience in languages like Java and Python, with moderate experience in Scala.</p>
+									<p>I have experience in both imperative programming, as well as functional programming.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Data Mining</h3>
+									<p>Experience in traditional data mining methods, as well as engineering methods, using SQL, Hadoop and Apache Spark.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Amet</h3>
+									<h3>Data Visualisation</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
@@ -327,42 +330,12 @@
 						</div>
 					</section>
 
-				<!-- Seven -->
-					<section class="wrapper style1 align-center">
-						<div class="inner medium">
-							<h2>Get in touch</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" value="" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-
-						</div>
-					</section>
-
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/cis-van-aken/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="cjf.vanaken@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
