Finished works.html

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -18,11 +18,11 @@
             <p>I am Cis van Aken, aiming to be a professional in AI and UX and this is my personal website. I am 24 years old, and currently in the final year of my Masters in Human Computer Interaction.</p>
         </div>
         <div class="image">
-            <img src="../images/spotlight03.jpg" alt="" />
+            <img src="../images/gallery/myself/graduation.jpg" alt="" />
         </div>
     </section>
 
-    <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+    <section class="spotlight style1 orient-right content-align-left image-position-right onscroll-image-fade-in" id="first">
         <div class="content">
             <header>
                 <h1>My Education</h1>
