--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Profile_temp.png" alt="" />
+							<img src="images/gallery/myself/foto_zelf_2.jpg" alt="" />
 						</div>
 					</section>
 
